MOstly everything is at least visible. Still some backend issues but it is better.

--- a/css/base.css
+++ b/css/base.css
@@ -63,7 +63,7 @@ table, td, tr, th, form, fieldset, em, button, a {
 
     --main-color: #00447b; /* Changed to Fred CASA Blue */
 
-    --accent-color: #c52e81;
+    --accent-color: #ffffff;
  
     --secondary-accent-color: #a3e0f7;
 
