--- a/css/editprofile.css
+++ b/css/editprofile.css
@@ -61,7 +61,7 @@ table, td, tr, th, form, fieldset, em, button, a {
     --shadow-and-border-color: #e8e8e8;
 
     --main-color: #00aeef;
-    --accent-color: #39B54A;
+    --accent-color: #ffffff;
     --secondary-accent-color: #f6a4b5;
 
     --calendar-event-color: #808080;
